- Bildergruppe geht nicht kaputt, wenn ein Ordner zur Bildergruppe wird, der
  nicht nur Bilder enthält (bug #4301).
- Asset-Views bei Center-Page (bug #4306).
- SyndicatedIn-Source war optimistisch über den Inhalt und ging bei
  "unbekannten Resourcen" kaputt (bug #4300).
- DailyNL in den Standard-Metadaten (bug #4307).
- JS-Warnung, wenn kein Firefox verwendet wird (bug #4305).

0.9.22 (2008-06-23)
-------------------

- Die Relateds werden beim Ändern des relateds nicht mehr doppelt in den
  Channel eingetragen (bug #4293).
- Globale Menus umgebaut, so dass weniger wichtige Eintrage in einem Dropdown
  verfügbar sind.
- Manuelles einstellen von Jahr/Ausgabe (bug #4273).
- Bilderordner beim Asset-Bearbeiten wird jetzt durch manuell eingestelltes
  Jahr/Ausgabe bestimmt. Auf jedem Ordner kann durch die WebDAV-Property
  {http://namespaces.zeit.de/CMS/Image}base-folder bestimmt werden wo die
  Wurzel für den Bereich ist (z.B. /zuender ->
  http://xml.zeit.de/bilder/zuender/)
- Kein Fehler mehr beim Bearbeiten von Objekten, die nicht mehr im Repository
  existieren (bug #4291).
- Biga hat jetzt Assets (bug #4294).
- Biga hat jetzt <gallery> als Root-Tag (bug #4295).
- Metadaten bearbeiten: Spitzmarke füllt Kurzteasertitel und Titel füllt
  Kurzteasertext (bug #4251).

0.9.21 (2008-06-19)
-------------------

- Noch bessere Unterstützung für alte Bildergalerien, so dass auch der Text
  richtig übernommen wird.

0.9.20 (2008-06-18)
-------------------

- XML-Editor: <column> unterhalb von <block> erlaubt (Zuender)
- XML-Editor: <block> mit priority="" geht nicht mehr kaputt.
- XML-Editor: Lange URLs im <block href=... zerfetzen das Layout nicht mehr
- XML-Editor: Bearbeiten von hrefs im <block>
- XML-Editor: Besseres "Click-Verhalten" beim Anzeigen der Aktionen
- Bessere Unterstützung für alte Bildergelerie

0.9.19 (2008-06-16)
-------------------

- Re-added released_from/released_to to the Workflow interfaces.

0.9.18 (2008-06-16)
-------------------
